# multispeech

./: .gitignore  AUTHORS  Makefile  Makefile.am  README  README.md  TODO  bootstrap  configure.ac  multispeech.conf  multispeech.conf.in
debian/: README.Debian  changelog  config  control  copyright  examples  install  libmultispeech0.manpages  libmultispeech0.shlibs  libmultispeech3.install  libmultispeech3.shlibs  libmultispeech5.install  libmultispeech5.shlibs  links  manpages  multispeech-common.install  multispeech-common.manpages  multispeech.README.Debian  multispeech.blurb  multispeech.docs  multispeech.install  multispeech.lintian-overrides  multispeech.manpages  multispeech.postinst  not-installed  orca-customizations.py  postinst  prerm  sd-multispeech.README.Debian  sd-multispeech.install  sd-multispeech.postinst  sd-multispeech.postrm  templates  watch
debian/po/: cs.po  de.po  fi.po  fr.po  it.po  pt.po  ru.po  sv.po  vi.po
debian/source/: lintian-overrides
debian/upstream/: metadata
doc/: .gitignore  Makefile.am  historical.txt  interface.txt  multispeech.1  multispeech.conf.5  multispeech.conf.man  multispeech.man  prehistory.ChangeLog
letters/br/: letters.lst
letters/de/: letters.lst
letters/en/: letters.lst
letters/es/: letters.lst
letters/fr/: letters.lst
letters/ru/: letters.lst
lisp/: Makefile  Russian-spelling.el  mbrola-css-speech.el  mbrola-voices.el  multilingual-server.el
m4/: bobcat.m4  boost.m4  portaudiocpp.m4  pulseaudio.m4  sndfile.m4
scripts/: emacspeak  generate_letters
scripts/players/: br  de  en  es  ru  sound  tones
scripts/tts/: br  de  en  es  fr  ru
src/: .gitignore  Brazilian.cpp  Brazilian.hpp  English.cpp  English.hpp  French.cpp  French.hpp  German.cpp  German.hpp  Italian.cpp  Italian.hpp  Makefile.am  Russian.cpp  Russian.hpp  Spanish.cpp  Spanish.hpp  audioplayer.cpp  audioplayer.hpp  config.cpp  config.hpp  dtk_voices.cpp  dtk_voices.hpp  espeak.cpp  espeak.hpp  exec_queue.hpp  file_player.cpp  file_player.hpp  freephone.cpp  freephone.hpp  frontend.cpp  frontend.hpp  historical.cpp  historical.hpp  iconv_codecvt.cpp  iconv_codecvt.hpp  inline_parser.cpp  inline_parser.hpp  language_description.cpp  language_description.hpp  loudspeaker.cpp  (+37 more)
src/core/: .gitignore  English.cpp  English.hpp  French.cpp  French.hpp  German.cpp  German.hpp  Italian.cpp  Italian.hpp  Makefile.am  Portuguese.cpp  Portuguese.hpp  Russian.cpp  Russian.hpp  Spanish.cpp  Spanish.hpp  audioplayer.cpp  audioplayer.hpp  config.cpp  config.hpp  espeak.cpp  espeak.hpp  exec_queue.hpp  file_player.cpp  file_player.hpp  freephone.cpp  freephone.hpp  iconv_codecvt.cpp  language_description.cpp  language_description.hpp  loudspeaker.cpp  loudspeaker.hpp  mbrola.cpp  mbrola.hpp  multispeech.cpp  multispeech.hpp  multispeech.vscript  pipeline.hpp  polyglot.cpp  polyglot.hpp  (+24 more)
src/emacspeak_ss/: .gitignore  Makefile.am  dtk_voices.cpp  dtk_voices.hpp  frontend.cpp  frontend.hpp  inline_parser.cpp  inline_parser.hpp  multispeech.cpp
src/espeech/: .gitignore  Makefile.am  dtk_voices.cpp  dtk_voices.hpp  frontend.cpp  frontend.hpp  inline_parser.cpp  inline_parser.hpp  multispeech.cpp  multispeech_voices.hpp
src/freephone/: Makefile  audio.c  broad_cats.c  buffer.c  conv1.c  conv2.c  durations.c  durpros.c  durs.c  edin2sampa.c  english.c  fw.c  go.c  grammar.c  interface.c  load_diphs.c  main.c  nrl_edin.c  phon_rules.c  phoneme.c  pitch.c  prosody.c  prototypes.h  read_rules.c  regerror.c  regexp.c  regsub.c  rule_engine.c  rule_engine.h  saynum.c  space.c  spellwor.c  spnio.c  syllab.c  t2s.c  t2s.h  tags.c  transcribe.c  utils.c
src/mscore/: .gitignore  English.cpp  English.hpp  Makefile.am  Russian.cpp  Russian.hpp  audioplayer.cpp  audioplayer.hpp  config.cpp  config.hpp  espeak.cpp  espeak.hpp  exec_queue.hpp  file_player.cpp  file_player.hpp  freephone.cpp  freephone.hpp  iconv_codecvt.cpp  iconv_codecvt.hpp  job.cpp  job.hpp  language_description.cpp  language_description.hpp  loudspeaker.cpp  loudspeaker.hpp  mbrola.cpp  mbrola.hpp  notification.cpp  notification.hpp  pipeline.cpp  pipeline.hpp  polyglot.cpp  polyglot.hpp  ru_tts.cpp  ru_tts.hpp  server.cpp  server.hpp  session.cpp  session.hpp  singleton.hpp  (+17 more)
src/multilingual/: Brazilian.cc  Brazilian.h  English.cc  English.h  French.cc  French.h  German.cc  German.h  Makefile  Russian.cc  Russian.h  Spanish.cc  Spanish.h  chain.cc  chain.h  expansion.cc  expansion.h  language.cc  language.h  punctuations.cc  punctuations.h  queue.cc  queue.h  regerror.c  regexp.c  regexp.h  regsub.c  source.cc  source.h  speech_server.cc  subprocess.cc  subprocess.h  substitutor.cc  substitutor.h  xmalloc.c  xmalloc.h
src/rawplay/: Makefile  rawplay.c
src/ssip/: .gitignore  Makefile.am  block.cpp  block.hpp  boolean_flag.cpp  boolean_flag.hpp  capitalization.cpp  capitalization.hpp  client_info.cpp  client_info.hpp  commands.cpp  commands.hpp  connection.cpp  connection.hpp  destination.cpp  destination.hpp  digital_value.cpp  digital_value.hpp  frontend.cpp  frontend.hpp  message.cpp  message.hpp  multispeechd.cpp  notification.cpp  notification.hpp  parser.cpp  parser.hpp  priority.cpp  priority.hpp  proxy.hpp  punctuation.cpp  punctuation.hpp  sd_multispeech.cpp  server.cpp  server.hpp  session.cpp  session.hpp  settings.cpp  settings.hpp  spd_settings.cpp  (+1 more)
src/tones/: DAC.c  Makefile  README.tones  Readme.siggen  file.c  fmtheaders.h  generator.c  misc.c  siggen.h  tones.1  tones.c  tonesgen.c
